force-app/main/default/objects/SMS_Provisioned_Product__c/SMS_Provisioned_Product__c.object-meta.xml
<CustomObject>
    <description>Used for product provisioning through Pervasive</description>
    <label>SMS Provisioned Product</label>
    <nameField>
        <displayFormat>Prov-{000000000}</displayFormat>
        <label>SMS_Provisioned_Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Provisioned Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>