force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Authentisign_Id__c.field-meta.xml
<CustomField>
    <fullName>Authentisign_Id__c</fullName>
    <label>Authentisign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>