force-app/main/default/objects/SMS_Provisioned_Product__c/fields/CloudCMA_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>CloudCMA_Email_Content__c</fullName>
    <label>CloudCMA_Email_Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>