force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Primary_Subscription__c</field>
            <operation>equals</operation>
            <valueField>$Source.Subscription__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Provisioned Products</relationshipLabel>
    <relationshipName>SMS_Provisioned_Products</relationshipName>
    <type>Lookup</type>
</CustomField>