force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Text(Subscription__r.Contact__r.Salutation) &amp; &quot; &quot; &amp;  Subscription__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Subscription__r.Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>