force-app/main/default/objects/SMS_Provisioned_Product__c/fields/ConversionDatetoSphere__c.field-meta.xml
<CustomField>
    <fullName>ConversionDatetoSphere__c</fullName>
    <description>This field is used for XactSite Conversion to Sphere</description>
    <label>Conversion Date to Sphere</label>
    <type>Date</type>
</CustomField>