force-app/main/default/objects/SMS_Provisioned_Product__c/fields/MRIS_Subscription_Record__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Subscription_Record__c</fullName>
    <formula>Subscription__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRIS Subscription Record</label>
    <type>Text</type>
</CustomField>