force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>