force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Previous_Provisioned_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Provisioned_Status__c</fullName>
    <label>Previous Provisioned Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisioned</fullName>
            </value>
            <value>
                <fullName>Pending Provisioned</fullName>
            </value>
            <value>
                <fullName>Deprovisioned</fullName>
            </value>
            <value>
                <fullName>Pending Deprovisioned</fullName>
            </value>
            <value>
                <fullName>Error Pending Provisioned</fullName>
            </value>
            <value>
                <fullName>Error Pending Deprovisioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>