force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Previuos_ProductSubType__c.field-meta.xml
<CustomField>
    <fullName>Previuos_ProductSubType__c</fullName>
    <label>Previuos Product Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>