force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authentisign</fullName>
            </value>
            <value>
                <fullName>realPING</fullName>
            </value>
            <value>
                <fullName>XactSite Total</fullName>
            </value>
            <value>
                <fullName>XactSite Select</fullName>
            </value>
            <value>
                <fullName>XactSite Premium</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX</fullName>
            </value>
            <value>
                <fullName>XactSite Office IDX</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website</fullName>
            </value>
            <value>
                <fullName>CloudCMA 1 Year</fullName>
            </value>
            <value>
                <fullName>CloudCMA 2 Year</fullName>
            </value>
            <value>
                <fullName>CloudCMA Monthly</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Basic</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Pro</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Agent IDX</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Office IDX</fullName>
            </value>
            <value>
                <fullName>Sphere Office by Bright MLS</fullName>
            </value>
            <value>
                <fullName>Social Pro Office by Bright MLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>