force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Promotions__c.field-meta.xml
<CustomField>
    <fullName>Promotions__c</fullName>
    <label>Promotions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>