force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Provisioned_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Product_Id__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Provisioned Product Id</label>
    <type>AutoNumber</type>
</CustomField>