force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Request_Product_Logging__c.field-meta.xml
<CustomField>
    <fullName>Request_Product_Logging__c</fullName>
    <description>Field used to capture the logs</description>
    <label>Request Product Logging</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>