force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Service_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Service_Jurisdiction__c</fullName>
    <label>Service Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRIS</fullName>
            </value>
            <value>
                <fullName>BRIGHT</fullName>
            </value>
            <value>
                <fullName>TREND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>