force-app/main/default/objects/SMS_Provisioned_Product__c/fields/T_C_acceptance_date__c.field-meta.xml
<CustomField>
    <fullName>T_C_acceptance_date__c</fullName>
    <label>T&amp;C Acceptance Date</label>
    <type>Date</type>
</CustomField>