force-app/main/default/objects/SMS_Provisioned_Product__c/fields/T_C_accepted_by__c.field-meta.xml
<CustomField>
    <fullName>T_C_accepted_by__c</fullName>
    <label>T&amp;C Accepted By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>