force-app/main/default/objects/SMS_Provisioned_Product__c/fields/XactSite_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>XactSite_Office_ID__c</fullName>
    <label>XactSite_Office_ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>