force-app/main/default/objects/SMS_Provisioned_Product__c/fields/Zuora_Product_Rate_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Rate_Plan_Id__c</fullName>
    <label>Zuora Product Rate Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>