force-app/main/default/objects/SMS_Provisioned_Product__c/listViews/Product_Type.listView-meta.xml
<ListView>
    <fullName>Product_Type</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Provisioned_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Sphere Office by Bright MLS,Social Pro Office</value>
    </filters>
    <label>Product Type</label>
</ListView>